[tool.poetry]
name = "kmbgame-backend"
version = "0.1.0"
description = "FastAPI multiplayer backend for Hidden RPS"
authors = ["Codex <codex@openai.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.116.1"
uvicorn = { version = "0.35.0", extras = ["standard"] }

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
